gameboard visual and server is up

--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,11 @@
 <body>
   <h1>Chance is starting Simon Says!!!!</h1>
 
-  <div id="wrapper">
-    <div id="red" class="button"> RED </div>
-    <div id="green" class="button"> GREEN </div>
-    <div id="blue" class="button"> BLUE </div>
-    <div id="yellow" class="button"> YELLOW </div>
+  <div id="wrapper" class="button">
+    <div id="red"> RED </div>
+    <div id="green"> GREEN </div>
+    <div id="blue"> BLUE </div>
+    <div id="yellow"> YELLOW </div>
   </div>
   <div id="score"> SCORE </div>
   <div id="round"> ROUND </div>
